backend/k8s/base/namespace.yaml
apiVersion: v1 
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: homepage
  name: homepage 
spec:
  finalizers:
  - kubernetes
