backend/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-backend
  namespace: homepage
  labels:
    app: homepage-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homepage-backend
  template:
    metadata:
      labels:
        app: homepage-backend
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: homepage-backend
        image: harbor.yuiop.org/homepage/homepage-backend:latest

        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 50051
          name: grpc
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
      imagePullSecrets:
      - name: harbor-cred
