backend/k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-backend-route
  namespace: homepage
spec:
  parentRefs:
  - name: gateway-api
    namespace: cilium-gateway
  hostnames:
    - "homepage.yuiop.org"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homepage-backend
      port: 8080

---

apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: homepage-backend-grpc-route
  namespace: homepage
spec:
  parentRefs:
  - name: gateway-api
    namespace: cilium-gateway
  hostnames:
    - "homepage.yuiop.org"
  rules:
  - backendRefs:
    - name: homepage-backend
      port: 50051
